--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "hello": "tsx scripts/hello.js"
   },
   "dependencies": {
     "@next/font": "13.1.6",
